--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,16 +35,25 @@ body {
 }
 
 .container {
-  scroll-snap-type: y mandatory; /* Enable vertical scroll snapping */
-  overflow-y: scroll; /* Allow scrolling */
-  height: 100vh; /* Full height for snapping */
+  scroll-snap-type: y mandatory;
+  /* Enable vertical scroll snapping */
+  overflow-y: scroll;
+  /* Allow scrolling */
+  height: 100vh;
+  /* Full height for snapping */
 }
 
 .snap-child {
-  scroll-snap-align: start; /* Align at the start of each section */
-  height: 100vh; /* Full height for snapping */
+  scroll-snap-align: start;
+  /* Align at the start of each section */
+  height: 100vh;
+  /* Full height for snapping */
   /* display: flex;
   justify-content: center;
   align-items: center;
   font-size: 2rem; */
+}
+
+.purple-blue-gradient {
+  background: linear-gradient(90deg, rgba(3, 115, 243, 1) 0%, rgba(118, 60, 172, 1) 100%);
 }
